--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,21 +1,48 @@
 @import '~bootstrap/scss/bootstrap';
 
-// body {
-//   height: 100vh;
-//   background: #efefef;
-// }
+body {
+  background: #efefef;
+  font-family: 'Major Mono Display', cursive;
+  height: 100vh;
+}
 
 h1 {
-  font-family: 'Major Mono Display', cursive;
   font-size: 54px;
   font-weight: 800;
+}
+
+.system-message {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1.2em;
+}
+
+.hide {
+  display: none;
+}
+
+.card {
+  margin-top: 15px;
 }
 
 .communication-bar {
   text-align: center;
 }
 
+button {
+  margin-left: 25%;
+  width: 50%;
+}
+
+.title {
+  padding: 35px;
+}
+
+.card-header {
+  font-size: 36px;
+  font-weight: 800;
+}
 // Form styling
+
 form {
   background-color: blue;
   border-radius: 15px;
@@ -33,8 +60,18 @@ form {
   }
 
   button {
-    margin-top: 15px;
     margin-left: 20%;
+    margin-top: 15px;
     width: 60%;
   }
+}
+
+.footer {
+  background-color: #fefefe;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  position: absolute;
+  right: 0;
+  text-align: center;
 }
