--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -18,8 +18,9 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
-.viewGroup, .deleteGroup {
+.joinGroup, .viewGroup, .deleteGroup, .getGroups {
   margin: 15px;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 // Handlebars styling
