--- a/assets/scripts/templates/single-group-page.handlebars
+++ b/assets/scripts/templates/single-group-page.handlebars
@@ -10,10 +10,10 @@
       <br/>
       <p class="card-text">{{group.Intro}}</p>
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Members: {{group.users}}</li>
-      <li class="list-group-item"><button type="button" class="btn btn-outline-primary joinGroup" data-id="{{group.id}}">Join this group!</button></li>
-      <li class="list-group-item"><button type="button" class="btn btn-danger deleteGroup" data-id="{{group.id}}">Delete {{group.Name}}</button></li>
+    <ul class="list-group list-group-flush" data-id="{{group.id}}">
+      <li class="list-group-item groupMailingList">Group Size: {{group.users.length}}</li>
+      <li class="list-group-item"><button type="button" class="btn btn-outline-primary joinGroup">Join this group!</button></li>
+      <li class="list-group-item"><button type="button" class="btn btn-danger deleteGroup">Delete {{group.Name}}</button></li>
       <li class="list-group-item"><button type="button" class="btn btn-secondary getGroups">Back to all groups &larr;</button></li>
     </ul>
     <br/>
