--- a/assets/scripts/templates/memberships-groups.handlebars
+++ b/assets/scripts/templates/memberships-groups.handlebars
@@ -1,4 +1,4 @@
-{{#each groups as |group|}}
+{{#each userData.groups as |group|}}
 <div class="row col-md-6 col-12">
   <div class="col-md-1 col-12"></div>
   <div class="card col-md-10 col-12" style="width: 18rem;">
