--- a/assets/scripts/templates/single-membership-page.handlebars
+++ b/assets/scripts/templates/single-membership-page.handlebars
@@ -35,8 +35,8 @@
         </div>
       </div>
     </div>
-      <li class="list-group-item"><button type="button" class="btn btn-danger deleteMembership">Leave {{group.Name}}</button></li>
-      <li class="list-group-item"><button type="button" class="btn btn-secondary getMemberships">Back to my memberships &larr;</button></li>
+      <li class="list-group-item"><button type="button" class="btn btn-danger deleteMembership" data-id="{{group.id}}">Leave {{group.Name}}</button></li>
+      <li class="list-group-item"><button type="button" class="btn btn-secondary backToMemberships"">Back to my memberships &larr;</button></li>
     </ul>
     <br/>
     <br/>
