--- a/assets/scripts/templates/single-group-page.handlebars
+++ b/assets/scripts/templates/single-group-page.handlebars
@@ -5,15 +5,15 @@
   <div class="card col-md-10 col-12" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title"><span class="standard" style="font-size: 1.2em; font-family: 'Josefin Sans', sans-serif;">Group Name:</span> <br/>
-        {{group.Name}} <span class="badge badge-info" style="font-family:'Josefin sANS', sans-serif;">{{group.Type}}</h5>
+        {{group.group_name}} <span class="badge badge-info" style="font-family:'Josefin sANS', sans-serif;">{{group.group_type}}</h5>
       <br/>
       <br/>
-      <p class="card-text">{{group.Intro}}</p>
+      <p class="card-text">{{group.group_description}}</p>
     </div>
     <ul class="list-group list-group-flush" data-id="{{group.id}}">
       <li class="list-group-item groupMailingList">Group Size: {{group.users.length}}</li>
       <li class="list-group-item"><button type="button" class="btn btn-outline-primary joinGroup">Join this group!</button></li>
-      <li class="list-group-item"><button type="button" class="btn btn-danger deleteGroup">Delete {{group.Name}}</button></li>
+      <li class="list-group-item"><button type="button" class="btn btn-danger deleteGroup">Delete {{group.group_name}}</button></li>
       <li class="list-group-item"><button type="button" class="btn btn-secondary getGroups">Back to all groups &larr;</button></li>
     </ul>
     <br/>
