--- a/assets/scripts/templates/single-group-page.handlebars
+++ b/assets/scripts/templates/single-group-page.handlebars
@@ -11,9 +11,11 @@
       <p class="card-text">{{group.group_description}}</p>
     </div>
     <ul class="list-group list-group-flush" data-id="{{group.id}}">
-      <li class="list-group-item groupMailingList">Group Size: {{group.users.length}}</li>
+      <li class="list-group-item groupMailingList">Group Size: {{group.memberships.length}}</li>
       <li class="list-group-item"><button type="button" class="btn btn-outline-primary joinGroup">Join this group!</button></li>
+      {{#if group.editable}}
       <li class="list-group-item"><button type="button" class="btn btn-danger deleteGroup">Delete {{group.group_name}}</button></li>
+      {{/if}}
       <li class="list-group-item"><button type="button" class="btn btn-secondary getGroups">Back to all groups &larr;</button></li>
     </ul>
     <br/>
