Amend front end to connect to API

--- a/assets/scripts/templates/memberships-groups.handlebars
+++ b/assets/scripts/templates/memberships-groups.handlebars
@@ -3,12 +3,13 @@
   <div class="col-md-1 col-12"></div>
   <div class="card col-md-10 col-12" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">{{org.group.group_name}} <span class="badge badge-info" style="font-family:'Josefin sANS', sans-serif;">{{org.group.group_type}}</h5>
+      <h5 class="card-title">{{org.group.group_name}}<span class="badge badge-info" style="font-family:'Josefin sANS', sans-serif;">{{org.group.group_type}}</h5>
+      <p class="card-text">membership id: {{org.id}}</p>
       <p class="card-text">{{org.group.group_description}}</p>
       <p class="card-text">Grand Pubah: {{org.group.group_admin}}</p>
       <p class="card-text">Roster size: {{org.group.memberships.length}}</p>
     </div>
-    <button type="button" class="btn btn-outline-secondary viewMembership" data-id="{{org.group.id}}">View</button>
+    <button type="button" class="btn btn-outline-secondary viewMembership" data-membership="{{org.id}}" data-id="{{org.group.id}}">View</button>
   </div>
   <div class="col-md-1 col-12"></div>
 </div>
